--- a/LiveDex/SettingsPage.xaml
+++ b/LiveDex/SettingsPage.xaml
@@ -53,73 +53,87 @@
                 Grid.Row        = "1"
                 Grid.RowSpan    = "3"
                 BackgroundColor = "White">
-                <!--<Label
-                    Text            = " "
-                    FontSize        = "45"
-                    BackgroundColor = "#34393D" />-->
-                <BoxView
-                    Color             = "#34393D"
-                    ScaleY            = "1.4"
-                    VerticalOptions   = "Start"
-                    HorizontalOptions = "Fill" />
-                <ActivityIndicator
-                    x:Name = "loading" />
-                <!--
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition
+                            Height = "60" />
+                        <RowDefinition
+                            Height = "20" />
+                        <RowDefinition
+                            Height = "*" />
+                    </Grid.RowDefinitions>
+                    <!--<Label
+                        Text              = " "
+                        Grid.Row          = "0"
+                        VerticalOptions   = "Fill"
+                        HorizontalOptions = "Fill"
+                        BackgroundColor   = "#34393D" />-->
+                    <BoxView
+                        Color             = "#34393D"
+                        Grid.Row          = "0"
+                        VerticalOptions   = "Fill"
+                        HorizontalOptions = "Fill" />
+                    <ActivityIndicator
+                        x:Name   = "loading"
+                        Grid.Row = "1" />
+                    <!--
                 <BoxView
                     Color             = "#34393D"
                     WidthRequest      = "160"
                     HeightRequest     = "60"
                     VerticalOptions   = "Center"
                     HorizontalOptions = "Center" />-->
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition
-                            Width = "*" />
-                        <ColumnDefinition
-                            Width = "*" />
-                        <ColumnDefinition
-                            Width = "*" />
-                        <ColumnDefinition
-                            Width = "*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition
-                            Height = "*" />
-                        <RowDefinition
-                            Height = "*" />
-                        <RowDefinition
-                            Height = "*" />
-                        <RowDefinition
-                            Height = "*" />
-                    </Grid.RowDefinitions>
-                    <Button
-                        Text            = "Release 'em All"
-                        Grid.Column     = "1"
-                        Grid.ColumnSpan = "2"
-                        Grid.Row        = "0"
-                        Clicked         = "SetAllPokemonMissing"
-                        Style           = "{StaticResource buttonStyle}">
-                        <Button.Triggers>
-                            <EventTrigger
-                                Event = "Clicked">
-                                <local:ReleaseAllTrigger />
-                            </EventTrigger>
-                        </Button.Triggers>
-                    </Button>
-                    <Button
-                        Text            = "Catch 'em All"
-                        Grid.Column     = "1"
-                        Grid.ColumnSpan = "2"
-                        Grid.Row        = "1"
-                        Clicked         = "SetAllPokemonCaught"
-                        Style           = "{StaticResource buttonStyle}">
-                        <Button.Triggers>
-                            <EventTrigger
-                                Event = "Clicked">
-                                <local:PokedexBehavior />
-                            </EventTrigger>
-                        </Button.Triggers>
-                    </Button>
+                    <Grid
+                        Grid.Row = "2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition
+                                Width = "*" />
+                            <ColumnDefinition
+                                Width = "*" />
+                            <ColumnDefinition
+                                Width = "*" />
+                            <ColumnDefinition
+                                Width = "*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition
+                                Height = "*" />
+                            <RowDefinition
+                                Height = "*" />
+                            <RowDefinition
+                                Height = "*" />
+                            <RowDefinition
+                                Height = "*" />
+                        </Grid.RowDefinitions>
+                        <Button
+                            Text            = "Release 'em All"
+                            Grid.Column     = "1"
+                            Grid.ColumnSpan = "2"
+                            Grid.Row        = "0"
+                            Clicked         = "SetAllPokemonMissing"
+                            Style           = "{StaticResource buttonStyle}">
+                            <Button.Triggers>
+                                <EventTrigger
+                                    Event = "Clicked">
+                                    <local:ReleaseAllTrigger />
+                                </EventTrigger>
+                            </Button.Triggers>
+                        </Button>
+                        <Button
+                            Text            = "Catch 'em All"
+                            Grid.Column     = "1"
+                            Grid.ColumnSpan = "2"
+                            Grid.Row        = "1"
+                            Clicked         = "SetAllPokemonCaught"
+                            Style           = "{StaticResource buttonStyle}">
+                            <Button.Triggers>
+                                <EventTrigger
+                                    Event = "Clicked">
+                                    <local:PokedexBehavior />
+                                </EventTrigger>
+                            </Button.Triggers>
+                        </Button>
+                    </Grid>
                 </Grid>
             </StackLayout>
         </Grid>
