Almost done with button triggers

--- a/LiveDex/SettingsPage.xaml
+++ b/LiveDex/SettingsPage.xaml
@@ -3,7 +3,7 @@
     xmlns      = "http://xamarin.com/schemas/2014/forms"
     xmlns:x     = "http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local = "clr-namespace:LiveDex.Models"
-    x:Class     = "LiveDex.SettingsPage">
+    x:Class     = "LiveDex.SettingsPage" Appearing="Handle_Appearing">
     <Page.Resources>
         <ResourceDictionary>
             <Style
@@ -105,7 +105,63 @@
                             <RowDefinition
                                 Height = "*" />
                         </Grid.RowDefinitions>
+                        <!--<Label Grid.Row="3"
+                            Text                    = "{Binding Name, StringFormat='Good morning {0}'}"
+                            HorizontalTextAlignment = "Center">
+                            <Label.Triggers>
+                                <DataTrigger
+                                    TargetType = "Label"
+                                    Binding    = "{Binding Name}"
+                                    Value      = "">
+                                    <Setter
+                                        Property = "IsVisible"
+                                        Value    = "False" />
+                                </DataTrigger>
+                            </Label.Triggers>
+                        </Label>-->
+                        <!--<Button
+                            x:Name="releaseButton"
+                            Text            = "Release 'em All"
+                            Grid.Column     = "1"
+                            Grid.ColumnSpan = "2"
+                            Grid.Row        = "0"
+                            Clicked         = "SetAllPokemonMissing"
+                            Style           = "{StaticResource buttonStyle}">
+                            <Button.Triggers>
+                                <DataTrigger
+                                    TargetType = "Button"
+                                    Binding    = "{Binding checkAllMissing}"
+                                    Value      = "True">
+                                    <Setter
+                                        Property = "IsEnabled"
+                                        Value    = "False" />
+                                    <Setter
+                                        Property = "Text"
+                                        Value    = "AHHHHHH" />
+                                </DataTrigger>
+                            </Button.Triggers>
+                        </Button>
                         <Button
+                            x:Name="catchButton"
+                            Text            = "Catch 'em All"
+                            Grid.Column     = "1"
+                            Grid.ColumnSpan = "2"
+                            Grid.Row        = "1"
+                            Clicked         = "SetAllPokemonCaught"
+                            Style           = "{StaticResource buttonStyle}">
+                           <Button.Triggers>
+                                <DataTrigger
+                                    TargetType = "Button"
+                                    Binding    = "{Binding checkAllCaught}"
+                                    Value      = "True">
+                                    <Setter
+                                        Property = "IsEnabled"
+                                        Value    = "False" />
+                                </DataTrigger>
+                            </Button.Triggers>
+                        </Button>-->
+                        <Button
+                            x:Name="releaseButton"
                             Text            = "Release 'em All"
                             Grid.Column     = "1"
                             Grid.ColumnSpan = "2"
@@ -120,6 +176,7 @@
                             </Button.Triggers>
                         </Button>
                         <Button
+                            x:Name="catchButton"
                             Text            = "Catch 'em All"
                             Grid.Column     = "1"
                             Grid.ColumnSpan = "2"
@@ -129,7 +186,7 @@
                             <Button.Triggers>
                                 <EventTrigger
                                     Event = "Clicked">
-                                    <local:PokedexBehavior />
+                                    <local:CatchAllTrigger />
                                 </EventTrigger>
                             </Button.Triggers>
                         </Button>
