--- a/LiveDex/PokemonPage.xaml
+++ b/LiveDex/PokemonPage.xaml
@@ -34,10 +34,10 @@
                     </DataTrigger>
                 </Label.Triggers>-->
             </Label>
-            <Image
+            <ImageButton
                 x:Name = "pokeBall"
                 Source = "pokeball.png"
-                Margin = "0,0,0,0" />
+                Margin = "0,0,0,0" Clicked="Handle_Clicked"/>
             <Switch
                 x:Name            = "pkmCaught"
                 HorizontalOptions = "CenterAndExpand"
